Small tweaks to backend

--- a/public/css/main-1.css
+++ b/public/css/main-1.css
@@ -1203,7 +1203,7 @@ header .header-images .shadow {
     width: 10%;
   }
 }
-#AboutVerb {
+#AboutProduct {
   background: #ffeac7;
 }
 #bad-energy {
