--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,16 +24,16 @@
 			<div class="row">
 				<div class="col-sm-6 col-12">
 					<div class="header-images row">
-						<div>
-								<img style="width:100%" src="/img/main-product.png">
+						<div style="text-align: center;">
+								<img style="width:50%" src="/img/main-product.png">
 						</div>
 					</div>
 				</div>
 				<div class="col-sm-6 col-12 mt-sm-5 mt-1 mb-5 mobile-12">
 					<div class="row mb-4 mt-1 text-center">
-						<h2 class="landing mb-3 w-100 ">OH S#!T</h2>
+						<h2 class="landing mb-3 w-100 ">$anitize It</h2>
 						<!-- <h2 class="landing fade-in mb-3 w-100">Except better.</h2> -->
-						<p class="w-100 h5 mobile-12 ">Don't get caught with your pants down.</p>
+						<p class="w-100 h5 mobile-12 ">Don't get caught with your hands dirty.</p>
 					</div>
 					<div class="row">
 						<div class="col-6 offset-3">
@@ -41,13 +41,13 @@
 								style="color:white;"
 						  		type="button" 
 						  		class="btn btn-primary" 
-						  		data-item-id="tp-pack"
-						  		data-item-name="TP Mega Pack"
+						  		data-item-id="hs"
+						  		data-item-name="Hand Sanitizer"
 						  		data-item-quantity=1
 						  		data-item-image="/img/main-product.png"
-						  		data-item-price=20
+						  		data-item-price=2
 						  		>
-							    Get your TP on
+							    Get your sanitization on
 							  </button>
 						</div>
 					</div>
@@ -67,15 +67,15 @@
   				<div class="row">
   					<div class="col-md-4 col-12 mt-5 mb-md-5">
   						<h4 class="mb-3">No more worrying.</h4>
-  						<p class="mb-0">Don't stress about making a TP run when you're in a rush.</p>
+  						<p class="mb-0">Don't stress about making a hand sanitizer run when you're in a rush.</p>
   					</div>
   					<div class="col-md-4 col-12 mt-5 mb-md-5">
   						<h4 class="mb-3">Save time and money.</h4>
-  						<p class="mb-0">Our mega-packs are the best bang for your buck.</p>
+  						<p class="mb-0">Our hand sanitizers are the best bang for your buck per sanitization.</p>
   					</div>
   					<div class="col-md-4 col-12 mt-5 mb-5">
   						<h4 class="mb-3">Start feeling incredible.</h4>
-  						<p class="mb-0">The smoothest wipe you've experienced.</p>
+  						<p class="mb-0">Kills 99.99% of germs in 15 seconds.</p>
   					</div>
   				</div>	
   			</div>
