--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
 
 <div class="col-sm-6 col-sm-offset-3">
 
-    <h1><span class="fa fa-sign-in"></span>Verb Team Login</h1>
+    <h1><span class="fa fa-sign-in"></span>Team Login</h1>
 
     <!-- show any messages that come back with authentication -->
     <% if (message.length > 0) { %>
@@ -15,8 +15,8 @@
     <!-- LOGIN FORM -->
     <form action="/login" method="post">
         <div class="form-group">
-            <label>E-mail</label>
-            <input type="text" class="form-control" name="email">
+            <label>Username</label>
+            <input type="text" class="form-control" name="username">
         </div>
         <div class="form-group">
             <label>Password</label>
