Dashboard graph changes

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -90,7 +90,7 @@
 					</div>
 					<div class="row pb-2">
 						<div class="col-sm-6 col-12 pb-lg-0 pb-2">
-							<input autocapitalize="words" id="firstName" name="firstName" class="form-control" type="text" placeholder="First Name" required value="<%= firstName %>">
+							<input autocomplete="given-name" autocapitalize="words" id="firstName" name="firstName" class="form-control" type="text" placeholder="First Name" required value="<%= firstName %>">
 						</div>
 						<div class="col-sm-6 col-12 pb-lg-0">
 							<input autocapitalize="words" id="lastName" name="lastName" class="form-control" type="text" placeholder="Last Name" required value="<%= lastName %>">
