--- a/views/crm/partials/right-sidebar.ejs
+++ b/views/crm/partials/right-sidebar.ejs
@@ -13,12 +13,12 @@
 					<form id="reorder">
 							<div class="row mb-1">
 								<div class="col-12 mb-2">
-									<div class="btn btn-primary w-100 tp-button">TP Mega Pack</div>
+									<div class="btn btn-primary w-100 tp-button">Hand Sanitizer</div>
 								</div>
 								<div class="col-6">
 									<div class="form-group form-inline">
 										<label for="tp-quantity">Q: </label>
-										<input class="cart-quant form-control w-75 ml-1" id="tp-quantity" name="tp-quantity" data-id="tp-mega-pack" data-name="TP Mega Pack" type="number" required value=1 min="0" onchange="cartTotal(this);">
+										<input class="cart-quant form-control w-75 ml-1" id="tp-quantity" name="tp-quantity" data-id="hs" data-name="Hand Sanitizer" type="number" required value=1 min="0" onchange="cartTotal(this);">
 									</div>
 								</div>
 								<div class="col-6">
