--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,10 +45,22 @@
 						  		data-item-name="Hand Sanitizer"
 						  		data-item-quantity=1
 						  		data-item-image="/img/main-product.png"
-						  		data-item-price=2
+						  		data-item-price=20
 						  		>
 							    Get your sanitization on
 							  </button>
+                <button class="w-100 landing-button main-order-button"
+                style="color:white; margin-top:10px;"
+                  type="button" 
+                  class="btn btn-primary" 
+                  data-item-id="hs-trial"
+                  data-item-name="Hand Sanitizer Trial"
+                  data-item-quantity=1
+                  data-item-image="/img/main-product.png"
+                  data-item-price=2
+                  >
+                  Or start with a trial pack
+                </button>
 						</div>
 					</div>
 				</div>
