--- a/views/dashboard/partials/header.ejs
+++ b/views/dashboard/partials/header.ejs
@@ -17,7 +17,7 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="/texttobuy">Dashboard</a></li>
+                        <li><a href="/dashboard">Dashboard</a></li>
                         <li><a href="/textorders">Orders</a></li>
                         <li><a href="/textcustomers">Customers</a></li>
                         <li><a href="/crm">CRM</a></li>
