--- a/views/dashboard/textorders.ejs
+++ b/views/dashboard/textorders.ejs
@@ -18,7 +18,7 @@
                     <tr>
                         <td><a href="/textOrders/<%= order.invoiceNumber %>"><%= order.invoiceNumber %></a></td>
                         <td><%= order.firstName +' '+order.lastName%></td>
-                        <td><a href="/textCustomers/<%= order.customerPhone %>"><%= order.customerPhone %></a></td>
+                        <td><a href="/crm?phone=<%= order.customerPhone %>"><%= order.customerPhone %></a></td>
                         <td><%= String(order.completionDate).substring(4,15) %></td>
                         <td><%= order.paid %></td>
                     </tr>
