--- a/views/crm/partials/chat-loading.ejs
+++ b/views/crm/partials/chat-loading.ejs
@@ -22,7 +22,9 @@
 					<div class="text-bubble customer-text">
 				<% } else if(message.chat.sentiment == 'negative'){ %>
 					<div class="text-bubble customer-text" style="background-color:#c62825;">
-				<% } %>
+				<% } else { %>
+					<div class="text-bubble customer-text">
+				<% } 
 					<% if(message.chat.mediaURL){ %>
 							<img class="thumbnail" src="<%=message.chat.mediaURL%>">
 						<% } else { %>
