--- a/views/crm/text.ejs
+++ b/views/crm/text.ejs
@@ -305,6 +305,7 @@
 		function bindConversation(){         
 			$('#conversation-body').scroll(function(){
 			    if ($('#conversation-body').scrollTop() == 0){
+			    	console.log('he');
 			        var url='/crm-chat?skip='+skip+'&phone='+$('#active-phone').data('phone');
 			        $.ajax({ 
 						type: 'GET', 
